...

                <TextView
                    android:id="@+id/text_view_from"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/edit_text_from"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <View
                    android:id="@+id/seperator1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
...

                <TextView
                    android:id="@+id/text_view_to"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/edit_text_to"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <View
                    android:id="@+id/seperator2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
...

                    <TextView
                        android:id="@+id/tv_departure"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/tv_dayDeparture"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                            <TextView
                                android:id="@+id/tv_monthYearDeparture"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:textSize="12sp"
                                app:layout_constraintBottom_toTopOf="@+id/tv_dayNameDeparture"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
...

                    <TextView
                        android:id="@+id/tv_return"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/tv_day_return"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                            <TextView
                                android:id="@+id/tv_monthYearReturn"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:textSize="12sp"
                                app:layout_constraintBottom_toTopOf="@+id/tv_dayNameReturn"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
...

                <View
                    android:id="@+id/seperator3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
...

                <ProgressBar
                    android:id="@+id/progress_circular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/bt_search" />

                <Button
...
